# preparation_price_lists

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml
converter/: Dockerfile  README.md  pyproject.toml
converter/src/: main.py
converter/src/api/v1/: upload_files.py
converter/src/core/: logger.py  settings.py
converter/src/db/: redis.py  redis_client.py
converter/src/services/: converter_files.py  file_processing.py  tasks.py
converter/tests/: test_converter.py
deploy/: logstash.conf
