[tool.poetry]
name = "converter"
version = "0.1.0"
description = ""
authors = ["Vladimir Nagibin <vlnagibin@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
pydantic-settings = "2.6.1"
xlwt = "1.3.0"
pandas = "1.5.3"
redis = "5.0.4"
aiofile = "3.9.0"
aiofiles = "24.1.0"
numpy = "1.23.5"
openpyxl = "3.1.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-subtests = "0.11.0"
isort = "6.0.0"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
force_grid_wrap = 0
use_parentheses = true
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = 3.11
follow_imports = "skip"

[tool.pytest.ini_options] 
# asyncio_mode=auto
norecursedirs = "env/* venv/*"
addopts = [
    "-vv",
    "-p",
    "no:cacheprovider",
    "--strict-markers",
]
testpaths = "functional/"
python_files = "test_*.py"
markers = [
    "test",
    "core"
]